# eq-meeting-coach

./: .gitignore  README.md  config.yaml  gradlew  pyproject.toml  requirements.txt  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/eqcoach/: EQCoachApplication.kt  MainActivity.kt
app/src/main/kotlin/com/eqcoach/capture/: AudioCapture.kt  CameraCapture.kt  WavEncoder.kt
app/src/main/kotlin/com/eqcoach/config/: AppConfig.kt
app/src/main/kotlin/com/eqcoach/model/: SessionState.kt  Verdict.kt
app/src/main/kotlin/com/eqcoach/network/: AnalyzeClient.kt
app/src/main/kotlin/com/eqcoach/ui/navigation/: Screen.kt  (+1 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
docs/: API_CONTRACT.md  COORDINATION_GUIDE.md  EQ_Meeting_Coach_PRD.docx  EQ_Meeting_Coach_PRD.md  EQ_Meeting_Coach_Stories.docx  EQ_Meeting_Coach_Stories.md  POST_WAVE3_PLAN.md  agent_android_capture.md  agent_android_shell.md  agent_ml_models.md  agent_server_api.md
gradle/: libs.versions.toml
inference-server/: Dockerfile  README.md  config.yaml  docker-compose.yml  main.py  requirements.txt
inference-server/config/: settings.py
inference-server/models/: __init__.py  schemas.py  stubs.py
inference-server/routes/: analyze.py
inference-server/tests/: test_analyze.py  test_config.py
src/eq_models/: __init__.py  config.py  facial.py  fusion.py  models.py  speech.py
tests/: conftest.py  generate_fixtures.py  test_facial.py  test_fusion.py  test_speech.py
(+12 files in other folders)
